--- a/paper-short/main.tex
+++ b/paper-short/main.tex
@@ -6,21 +6,25 @@
 %for anonymousing the authors (e.g. for double-blind review), add "anonymous"
 %for enabling thm-restate support, use "thm-restate"
 
-\graphicspath{{./images/}}
+\graphicspath{{./images/}{../images/}}
 
-\bibliographystyle{plainurl}% the mandatory bibstyle
+\bibliographystyle{plainurl}
+% the mandatory bibstyle
 
-\title{Towards Verifying the Bitcoin-S Library} %TODO Please add
+\title{Towards Verifying the Bitcoin-S Library} 
 
-%\titlerunning{Dummy short title} %TODO optional, please use if title is longer than one line
+% \titlerunning{Dummy short title}
+% optional, please use if title is longer than one line
 
 \author{Ramon Boss}{Bern University of Applied Sciences, Switzerland}{ramon.boss@outlook.com}{}{}
 \author{Kai Brünnler}{Bern University of Applied Sciences, Switzerland}{kai.bruennler@bfh.ch}{}{}
 \author{Anna Doukmak}{Bern University of Applied Sciences, Switzerland}{anna.doukmak@gmail.com}{}{}
 
-\authorrunning{R. Boss and K. Brünnler and A. Doukmak} %TODO mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et al.'
+\authorrunning{R. Boss and K. Brünnler and A. Doukmak}
+% mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et al.'
 
-\Copyright{Ramon Boss and Kai Brünnler and Anna Doukmak} %TODO mandatory, please use full first names. OASIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
+\Copyright{Ramon Boss and Kai Brünnler and Anna Doukmak}
+% mandatory, please use full first names. OASIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
 
 \begin{CCSXML}
 <ccs2012>
